--- a/MechatronicsPortal/Views/Alumni/ProfessionalDetails.cshtml
+++ b/MechatronicsPortal/Views/Alumni/ProfessionalDetails.cshtml
@@ -105,7 +105,7 @@
     </div>
     <div class="col s6">
         <div class="center-align">
-            <a href="@Url.Action("EducationalDetails","Home", null)" class="waves-effect waves-light btn  modal-trigger"><i class="material-icons left">send</i>Proceed</a>
+            <a href="@Url.Action("EducationalDetails","Alumni", null)" class="waves-effect waves-light btn  modal-trigger"><i class="material-icons left">send</i>Proceed</a>
         </div>
     </div>
 </div>
