--- a/MechatronicsPortal/Views/ProgramManager/ViewStudents.cshtml
+++ b/MechatronicsPortal/Views/ProgramManager/ViewStudents.cshtml
@@ -4,7 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+<style>
+    .container-fluid label{
+        font-size: 13px !important
+    }
+</style>
 @if (ViewBag.message != null)
 {
     <script>
@@ -14,6 +18,18 @@
     </script>
 }
 <h2 class="text-center">View All Students</h2>
+<div class="container-fluid">
+    <div class="input-field center-align" style="width:fit-content">
+        <select>
+            <option value="" disabled selected>Choose your option</option>
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+        </select>
+        <label>Select batch</label>
+    </div>
+</div>
+
 <table class="responsive-table">
     <thead>
         <tr>
@@ -60,3 +76,9 @@
         }
     </tbody>
 </table>
+<script>
+    $(document).ready(function () {
+        $('select').formSelect();
+    });
+
+</script>
